// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GameDescription > should render a component with records table 1`] = `
<div>
  <button
    class="btn ml-auto flex w-auto justify-end text-3xl xs-xl:absolute xs-xl:right-[10px] xs-xl:top-[10px] xl:static"
    data-testid="language-switcher"
  >
    🇬🇧
  </button>
  <header
    class="text-center"
    id="header"
  >
    <h1
      class="mb-6 mt-5 text-4xl font-extrabold leading-none"
    >
      🎲 Tenzies
    </h1>
    <p
      class="text-lg"
    >
      Roll until all dice are the same. Click each die to freeze it at its current value between rolls.
    </p>
  </header>
  <section
    class="mt-[50px] flex w-full flex-col items-center justify-center"
    data-testid="records-list"
    id="records-list"
  >
    <h2
      class="mb-4 text-center text-xl font-extrabold"
    >
      Top 5 results
      :
    </h2>
    <div
      class="relative w-full overflow-x-auto"
      data-testid="records-table"
      id="records-table-responsive-wrapper"
    >
      <table
        class="table table-sm"
        id="records-table"
      >
        <thead
          class="bg-main-button text-main-die"
        >
          <tr
            class="border-separate text-center"
          >
            <th
              class="border-main-board-color border border-gray-400 text-base"
            >
              #
            </th>
            <th
              class="border-main-board-color border border-gray-400 text-base"
            >
              Date
            </th>
            <th
              class="border-main-board-color border border-gray-400 text-base"
            >
              Date
            </th>
            <th
              class="border-main-board-color border border-gray-400 text-base"
            >
              Total clicks
            </th>
            <th
              class="border-main-board-color border border-gray-400 text-base"
            >
              Total time
            </th>
          </tr>
        </thead>
        <tbody
          class="text-center"
        >
          <tr
            class="record-element bg-white"
          >
            <td
              class="border-main-board-color border border-gray-400 p-1.5"
            >
              1
            </td>
            <td
              class="border-main-board-color border border-gray-400 p-1.5"
            >
              Jun 19 at 2024, 5:44 PM
            </td>
            <td
              class="border-main-board-color border border-gray-400 p-1.5"
            >
              Easy
            </td>
            <td
              class="border-main-board-color border border-gray-400 p-1.5"
            >
              9
            </td>
            <td
              class="border-main-board-color border border-gray-400 p-1.5"
            >
              19
              s
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
  <section
    class="mt=[35px] flex w-full flex-col items-center justify-center"
    id="difficulty"
  >
    <h2
      class="mb-4 mt-10 text-center text-2xl font-extrabold"
    >
      Please choose the difficulty
      :
    </h2>
    <select
      class="select select-bordered"
      data-testid="difficulty-selector"
      name="difficulty"
    >
      <option
        value="easy"
      >
        Easy
      </option>
      <option
        selected=""
        value="normal"
      >
        Normal
      </option>
      <option
        value="hard"
      >
        Hard
      </option>
    </select>
  </section>
  <button
    class="btn btn-primary  tooltip-top mx-auto my-[25px] mt-[50px] w-fit min-w-32 bg-main-button text-2xl text-main-die"
    data-testid="roll-dice-button"
    data-tip="Please select all equal dice before rolling."
  >
    Start the game
  </button>
</div>
`;

exports[`GameDescription > should render a component without records table 1`] = `
<div>
  <button
    class="btn ml-auto flex w-auto justify-end text-3xl xs-xl:absolute xs-xl:right-[10px] xs-xl:top-[10px] xl:static"
    data-testid="language-switcher"
  >
    🇬🇧
  </button>
  <header
    class="text-center"
    id="header"
  >
    <h1
      class="mb-6 mt-5 text-4xl font-extrabold leading-none"
    >
      🎲 Tenzies
    </h1>
    <p
      class="text-lg"
    >
      Roll until all dice are the same. Click each die to freeze it at its current value between rolls.
    </p>
  </header>
  <section
    class="mt=[35px] flex w-full flex-col items-center justify-center"
    id="difficulty"
  >
    <h2
      class="mb-4 mt-10 text-center text-2xl font-extrabold"
    >
      Please choose the difficulty
      :
    </h2>
    <select
      class="select select-bordered"
      data-testid="difficulty-selector"
      name="difficulty"
    >
      <option
        value="easy"
      >
        Easy
      </option>
      <option
        selected=""
        value="normal"
      >
        Normal
      </option>
      <option
        value="hard"
      >
        Hard
      </option>
    </select>
  </section>
  <button
    class="btn btn-primary  tooltip-top mx-auto my-[25px] mt-[50px] w-fit min-w-32 bg-main-button text-2xl text-main-die"
    data-testid="roll-dice-button"
    data-tip="Please select all equal dice before rolling."
  >
    Start the game
  </button>
</div>
`;
